--- a/pseudo/pseudo.html
+++ b/pseudo/pseudo.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pseudo-apply</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <h1>Jobayer Ahmed</h1>
+
+    <form action="" class="input">
+
+        <input type="text">
+        <input class="middle" type="text" placeholder="Write Here">
+        <input type="text">
+    </form>
+
+    <br>
+
+    <a target="_blank" href="https://www.google.com/">Google</a>
+    <a target="_blank" href="https://www.underconsideration.com/brandnew/">Never visited</a>
+    <a target="_blank" href="https://web.programming-hero.com/">Programming Hero</a>
+
 </body>
+
 </html>
